# Pokemon-TCGP-Simulator

./: .gitignore  README.md  RULES.md  logs_v6.txt  logs_v7.txt  logs_v7b.txt  logs_v7c.txt  logs_v7e.txt  logs_v7f.txt  logs_v7g.txt  pyproject.toml  run_training.py
assets/cards/: a1-genetic-apex.json  a1a-mythical-island.json  a2-space-time-smackdown.json  a2a-triumphant-light.json  a2b-shining-revelry.json  a3-celestial-guardians.json  a3a-extradimensional-crisis.json  additional-cards.json  promo.json
docs/: ARCHITECTURE.md  CARD_EFFECTS.md
docs/progress/: phase-0-bootstrap.md  phase-1-foundation.md  phase-2-group-a.md  phase-2-group-b.md  phase-2-group-c.md  phase-2-group-d.md  phase-3a-effects-framework.md  phase-3b-effects.md  phase-4-group-e.md  phase-4-group-f.md  phase-5-ui.md  phase-6-batch.md
docs/superpowers/specs/: 2026-03-23-ptcgp-simulator-rewrite-design.md
logs/: logs_v6b.txt  logs_v7d.txt  logs_v7h.txt  logs_v8.txt  logs_v8b.txt
ptcgp/: Cargo.toml  cli.py
ptcgp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ptcgp/agents/: __init__.py  base.py  heuristic.py  human.py  random_agent.py
ptcgp/benches/: throughput.rs
ptcgp/cards/: attack.py  card.py  database.py  loader.py  types.py
ptcgp/data/decks/: sample_decks.py
ptcgp/decks/: sample_decks.py  validator.py
ptcgp/effects/: __init__.py  apply.py  base.py  coin_flip.py  damage_effects.py  damage_modifiers.py  draw.py  energy_effects.py  heal.py  items.py  misc_effects.py  movement.py  parser.py  registry.py  status_apply.py  targeting.py  tool_effects.py
ptcgp/engine/: __init__.py  abilities.py  actions.py  attack.py  cards.py  checkup.py  constants.py  energy.py  evolve.py  game.py  ko.py  legal_actions.py  mutations.py  play_card.py  retreat.py  runner.py  setup.py  slot_utils.py  state.py  status.py  turn.py  types.py
ptcgp/runner/: batch_runner.py  game_runner.py
ptcgp/simulation/: simulator.py
ptcgp/src/: actions.rs  batch.rs  card.rs  constants.rs  decks.rs  lib.rs  runner.rs  state.rs  types.rs  ui.rs
ptcgp/src/agents/: human.rs  mod.rs
ptcgp/src/effects/: damage_mod_handlers.rs  dispatch.rs  draw_handlers.rs  energy_handlers.rs  heal_handlers.rs  legality.rs  misc_handlers.rs  mod.rs  movement_handlers.rs  status_handlers.rs
ptcgp/src/engine/: abilities.rs  attack.rs  checkup.rs  energy.rs  evolve.rs  ko.rs  legal_actions.rs  mutations.rs  play_card.rs  retreat.rs  setup.rs  turn.rs
ptcgp/src/ml/: card_embed.rs  checkpoint.rs  determinize.rs  features.rs  league.rs  mcts.rs  mod.rs  net.rs  nn_greedy.rs  replay.rs  selfplay.rs  train.rs
ptcgp/training/: deck_optimizer.py  env.py  train.py
ptcgp/ui/: prompts.py  renderer.py  theme.py
ptcgp_rust/: Cargo.toml  pyproject.toml
ptcgp_rust/benches/: throughput.rs
ptcgp_rust/src/: actions.rs  batch.rs  card.rs  constants.rs  lib.rs  runner.rs  state.rs  types.rs
ptcgp_rust/src/agents/: mod.rs
ptcgp_rust/src/effects/: damage_mod_handlers.rs  dispatch.rs  draw_handlers.rs  energy_handlers.rs  heal_handlers.rs  misc_handlers.rs  mod.rs  status_handlers.rs
ptcgp_rust/src/engine/: abilities.rs  attack.rs  energy.rs  ko.rs  legal_actions.rs  mod.rs  mutations.rs  play_card.rs  setup.rs  turn.rs
saved_checkpoints/: README.md
saved_checkpoints/v5_gen001/: meta.json
saved_checkpoints/v7_gen446/: meta.json  weights.safetensors
saved_checkpoints/v8_gen105/: meta.json  weights.safetensors
saved_checkpoints/v8_gen111/: meta.json  weights.safetensors
scripts/: warm_start_v8.py
tests/: conftest.py  test_engine.py  test_integration.py
tests/agents/: test_random.py
tests/cards/: test_database.py  test_loader.py
tests/effects/: test_draw.py  test_energy_effects.py  test_heal.py  test_movement.py  test_parser.py  test_registry.py  test_status_effects.py
tests/engine/: test_attack.py  test_checkup.py  test_energy.py  test_evolve.py  test_full_game.py  test_ko.py  test_legal_actions.py  test_play_card.py  test_retreat.py  test_setup.py  test_status.py  test_turn.py
tests/runner/: test_batch_runner.py  test_game_runner.py
