[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcgp"
version = "0.1.0"
description = "Pokemon TCG Pocket Battle Simulator"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = ["gymnasium>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ptcgp = "ptcgp.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptcgp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
