[package]
name = "ptcgp_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "ptcgp_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
