[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ptcgp-rust"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust engine for the Pokemon TCG Pocket Battle Simulator"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ptcgp_rust"
